--- a/content/post/2022-06-04-dglm-poisson-distribution-state-space-model/index.Rmd
+++ b/content/post/2022-06-04-dglm-poisson-distribution-state-space-model/index.Rmd
@@ -8,7 +8,7 @@ tags:
   - Bayesian Modelling (R and Stan)
 ---
 ## Purpose
-Bayesian estimation of the DGLM (Poisson distribution), a state space model, 
+Bayesian estimation of the Dynamic Generalized Linear Model (Poisson distribution), a state space model, 
 will be implemented using R and Stan. 
 The implementation is done from data creation, 
 so it can be reproduced by copy and paste.
