--- a/content/post/2022-06-09-mundell-fleming-is-back/index.Rmd
+++ b/content/post/2022-06-09-mundell-fleming-is-back/index.Rmd
@@ -10,8 +10,8 @@ tags:
 
 ## The Mundell-Fleming Model is back!!
 
-The yen is currently blasting off to a low of over ¥ 134 to USD 1. 
-This is likely due to the Bank of Japan Governor Kuroda's statement that "households are becoming more tolerant of price hikes. 
+The Japanese yen is currently blasting off to a low of over ¥ 134 to USD 1. 
+This is likely due to the Bank of Japan Governor Kuroda's statement that "households are becoming more tolerant of price hikes." 
 His tone was that the yen should weaken further, 
 and the market probably reacted to this.
 
