--- a/content/post/2022-06-21-bayeian-estimation-with-categorical-distribution/index.Rmd
+++ b/content/post/2022-06-21-bayeian-estimation-with-categorical-distribution/index.Rmd
@@ -4,5 +4,69 @@ author: Akihiko Mori
 date: '2022-06-21'
 slug: []
 categories: []
-tags: []
+tags:
+  - Bayesian Statistics (R)
 ---
+
+## Purpose
+Bayesian estimation of the parameter p of the Categorical distribution will be implemented using R. 
+For the prior distribution, a beta distribution will be specified, and the posterior distribution will be obtained. 
+We will implement this from data generation, so it can be reproduced by copy and paste.
+
+## TOC
+1. Library
+2. True Distribution
+3. Prior Distribution
+4. Data Generation
+5. Posterior Distribution
+
+## Library
+```{r message=FALSE}
+library(ggplot2)
+library(MCMCpack)
+set.seed(1)
+```
+
+## True Distribution
+```{r}
+x <- c(1, 2, 3)
+p <- c(0.1, 0.6, 0.3)
+prob <- p
+
+ggplot() + 
+  geom_bar(aes(x, prob), stat ="identity") +
+  labs(x="x", y="prob", title="Categorical Distribution")+
+  theme_classic(base_family = "HiraKakuPro-W3") +
+  theme(text = element_text(size = 24))
+```
+
+
+## Prior Distribution
+```{r}
+alpha_pre <- c(1, 1, 1)
+p_samples_pre <- rdirichlet(100, alpha_pre)
+
+plot <- ggplot()+
+  geom_point(aes(x=p_samples_pre[,1], y=p_samples_pre[,2]))+
+  labs(x="1", y="2", title="Dirichlet Distribution")+
+  theme_classic(base_family = "HiraKakuPro-W3") +
+  theme(text = element_text(size = 24))+
+  lims(x=0:1, y=0:1)
+plot
+```
+
+
+## Data Generation
+```{r}
+data <- which(rmultinom(300, 1, c(0.1, 0.6, 0.3))==1, arr.ind = TRUE)[,1]
+N <- length(data)
+```
+
+## Posterior Distribution
+
+```{r}
+alpha_pos <- as.vector(table(data)) + alpha_pre
+p_samples_pos <- rdirichlet(100, alpha_pos)
+
+plot + geom_point(aes(x=p_samples_pos[,1], y=p_samples_pos[,2]), col="blue")
+```
