--- a/content/post/2022-06-22-bayeian-estimation-with-multivariate-normal-distribution-mu/index.Rmd
+++ b/content/post/2022-06-22-bayeian-estimation-with-multivariate-normal-distribution-mu/index.Rmd
@@ -9,7 +9,7 @@ tags:
 ---
 
 ## Purpose
-Bayesian estimation of the parameter μ,λ of Multivariate Gaussian (Normal) distribution will be implemented using R. 
+Bayesian estimation of the parameter μ of Multivariate Gaussian (Normal) distribution will be implemented using R. 
 For the prior distribution, Multivariate Gaussian distributions will be specified, and the posterior distribution will be obtained. 
 This will implement this from data generation, so it can be reproduced by copy and paste.
 
@@ -28,14 +28,14 @@ set.seed(1)
 ```
 
 ## True Distribution
-```{r}
+```{r, message=FALSE}
 mu <- c(170, 60)
 lambda <- solve(matrix(c(100, 80, 80, 100), ncol = 2))
 samples <- mvrnorm(100, mu = mu, Sigma = solve(lambda))
 
 ggplot()+
   geom_point(aes(x=samples[,1], y=samples[,2]))+
-  labs(x="x", y="prob", title="ガウス分布")+
+  labs(x="x", y="prob", title="Gaussian Distribution")+
   theme_classic(base_family = "HiraKakuPro-W3") +
   theme(text = element_text(size = 24))+
   lims(x=c(140,200), y=c(30,90))
