--- a/content/post/2022-06-22-multiple-regression-analysis/index.Rmd
+++ b/content/post/2022-06-22-multiple-regression-analysis/index.Rmd
@@ -10,7 +10,7 @@ tags:
 
 ## Purpose
 A multiple regression analysis will be implemented using R. 
-The data will be implemented from the data generation, 
+The data is implemented from the data generation, 
 so it can be reproduced by copy and paste.
 
 ## TOC
