--- a/content/post/2022-06-24-quantification-method-i/index.Rmd
+++ b/content/post/2022-06-24-quantification-method-i/index.Rmd
@@ -9,7 +9,7 @@ tags:
 ---
 
 ## Purpose
-A cluster analysis (k-Means Method) will be implemented using R. 
+Hayashi's quantification method/theory I will be implemented using R. 
 The data is implemented randomly, 
 so it can be reproduced by copy and paste.
 
