path analysis added

--- a/content/post/2022-06-24-confirmatory-factor-analysis/index.Rmd
+++ b/content/post/2022-06-24-confirmatory-factor-analysis/index.Rmd
@@ -9,7 +9,7 @@ tags:
 ---
 
 ## Purpose
-An exploratory factor analysis (EFA) will be implemented using R. 
+A Confirmatory factor analysis will be implemented using R. 
 The data is implemented randomly, 
 so it can be reproduced by copy and paste.
 
