--- a/content/post/2022-06-04-murkiness-of-statistics-soliloquy/index.Rmd
+++ b/content/post/2022-06-04-murkiness-of-statistics-soliloquy/index.Rmd
@@ -16,7 +16,7 @@ The problem statement for statistical inference is that, given data $\{x_1,...,x
 
 In the context of machine learning, unsupervised learning is classified as supervised or unsupervised learning, but unsupervised learning is exactly the same setup as above. Supervised learning guesses the conditional probability $q(y|x)$ of being label data y for training data x. In situations where the distribution $q(x)$ of $x$ is known, $q(x,y)=q(y|x)q(x)$, and by thinking of the $x$, $y$ pair $(x,y)$ as sample data, the same setup can be discussed .
 
-If you cannot imagine the true distribution or the model, consider, for example, the case of inferring the distribution of height of all Japanese people from the data of 100 Japanese people's height. In this case, the true distribution is the distribution of "the height of all Japanese. In reality, since the population slightly increases or decreases during the time when height is sampled, it is ambiguous what the "distribution of the height of all Japanese people" is, which would fluctuate accordingly. However, the margin of error is probably small, so please let that go. We can assume that the model is roughly what is called a 00 distribution. For example, a normal distribution is uniquely determined by the center and variance, and these two parameters make up a family of probability distributions. When we say that the normal distribution model is used to estimate the distribution of the overall height of the Japanese, it is to determine the parameters of the normal distribution that seem to be closest to the distribution of the overall height of the Japanese. However, one should not assume that this will accurately determine the distribution of the overall Japanese height. This is because the normal distribution assumes that negative heights are also possible.
+If you cannot imagine the true distribution or the model, consider, for example, the case of inferring the distribution of height of all Japanese people from the data of 100 Japanese people's height. In this case, the true distribution is the distribution of "the height of all Japanese. In reality, since the population slightly increases or decreases during the time when height is sampled, it is ambiguous what the "distribution of the height of all Japanese people" is, which would fluctuate accordingly. However, the margin of error is probably small, so please let that go. We can roughly assume that the model is a XXXX distribution. For example, a normal distribution is uniquely determined by the center and variance, and these two parameters make up a family of probability distributions. When we say that the normal distribution model is used to estimate the distribution of the overall height of the Japanese, it is to determine the parameters of the normal distribution that seem to be closest to the distribution of the overall height of the Japanese. However, one should not assume that this will accurately determine the distribution of the overall Japanese height. This is because the normal distribution assumes that negative heights are also possible.
 
 The closeness of the model to the true distribution $q(x)$ is measured by something called the [Kullback-Leibler divergence](https://en.wikipedia.org/wiki/Kullback%E2%80%93Leibler_divergence) (also called relative entropy and I-divergence). In general, when $q(x)$ and $p(x)$ are probability distributions, the Kullback-Leibler divergence is defined as:
 
